More user interface corrections.                     So I believe this is the first time I got the buttons at the top to be on the right like I wanted them to be, also I added in the skeleton of what hopefully will eventually become where the recipies will populate, in NEAT collapsable boxes.

--- a/Assets/Css/style.css
+++ b/Assets/Css/style.css
@@ -8,6 +8,17 @@ html {
     background-color: lightskyblue;
     padding: 2%;
     margin: 2%;
-    height: 400px;   
+    
+       
 }
 
+.collapsible-header {
+    margin-bottom: 6px;
+}
+
+
+
+/* For some reason, Materialize was adding in a character counter to our input and displaying it in the bottom right corner of our ingredients input section. This makes it hidden. */
+.character-counter {
+    visibility: hidden;
+}
